--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "altermind",
   "version": "0.1.0",
   "private": true,
+  "build": {
+    "appId": "com.altermind"
+  },
+  "main": "public/electron.js",
+  "homepage": ".",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,18 +20,29 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "concurrently": "^5.1.0",
+    "cross-env": "^7.0.0",
+    "electron": "^8.0.0",
+    "electron-builder": "^22.3.2",
+    "electron-is-dev": "^1.1.0",
     "graphql": "^14.6.0",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "wait-on": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "npm run react-build && npm run complie && electron-builder --publish=always",
+    "build": "npm run react-build && npm run electron-build",
+    "serve": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && nodemon --exec \"\"electron .\"\""
   },
   "eslintConfig": {
     "extends": "react-app"
