--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "autoprefixer": "^9.7.4",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
+    "draft-js": "^0.11.5",
     "electron": "^8.0.0",
     "electron-builder": "^22.3.2",
     "electron-is-dev": "^1.1.0",
     "graphql": "^14.6.0",
+    "marked": "^0.8.2",
     "nodemon": "^2.0.2",
     "postcss-cli": "^7.1.0",
     "react": "^16.12.0",
@@ -66,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.40",
     "@types/react-router-dom": "^5.1.3"
   }
 }
