--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.40",
+    "@types/marked": "^0.7.4",
     "@types/react-router-dom": "^5.1.3"
   }
 }
