--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "altermind",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "build": {
     "appId": "com.altermind"
@@ -8,48 +8,46 @@
   "main": "public/electron.js",
   "homepage": ".",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "@types/node": "^12.12.36",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
-    "autoprefixer": "^9.7.4",
+    "apollo-link-http": "^1.5.17",
+    "autoprefixer": "^9.7.6",
     "concurrently": "^5.1.0",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "draft-js": "^0.11.5",
-    "electron": "^8.0.0",
-    "electron-builder": "^22.3.2",
-    "electron-is-dev": "^1.1.0",
+    "electron-is-dev": "^1.2.0",
     "graphql": "^14.6.0",
     "marked": "^0.8.2",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "postcss-cli": "^7.1.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "tailwindcss": "^1.2.0",
-    "typescript": "^3.7.5",
-    "wait-on": "^4.0.0"
+    "typescript": "^3.8.3",
+    "wait-on": "^4.0.2"
   },
   "scripts": {
-    "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
+    "react-start": "npm run prestart && react-scripts start",
+    "react-build": "npm run prebuild && react-scripts build",
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "npm run react-build && npm run complie && electron-builder --publish=always",
+    "release": "npm run react-build electron-builder --publish=always",
     "build": "npm run react-build && npm run electron-build",
     "build:styles": "postcss src/tailwind.css -o src/styles.css",
-    "prebuild": "yarn build:styles",
-    "prestart": "yarn build:styles",
+    "prebuild": "npm run build:styles",
+    "prestart": "npm run build:styles",
     "serve": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3030 && nodemon --exec \"\"electron .\"\""
   },
   "eslintConfig": {
@@ -70,6 +68,8 @@
   "devDependencies": {
     "@types/draft-js": "^0.10.40",
     "@types/marked": "^0.7.4",
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.4",
+    "electron": "^8.2.3",
+    "electron-builder": "^22.5.1"
   }
 }
