--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/markdown-draft-js": "^2.2.1",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -24,8 +25,10 @@
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "draft-js": "^0.11.5",
+    "draftjs-to-markdown": "^0.6.0",
     "electron-is-dev": "^1.2.0",
     "graphql": "^14.6.0",
+    "markdown-draft-js": "^2.2.0",
     "marked": "^0.8.2",
     "nodemon": "^2.0.3",
     "postcss-cli": "^7.1.0",
