--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-cli": "^7.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hotkeys": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "tailwindcss": "^1.2.0",
