--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # testing
 /coverage
 
+
 # production
 /build
 
@@ -23,6 +24,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+# env
+.env
 
 npm-debug.log*
 yarn-debug.log*
